<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">logmein</string>
    <string name="action_settings">Settings</string>


    <string name="Button">Button</string>
    <string name="button_save_main">Save</string>
    <string name="button_logmein">LogMeIn</string>
    <string name="button_logout">Logout</string>

    <string name="edit_username_hint">Enter Username</string>
    <string name="edit_password_hint">Enter Password</string>
    <string name="empty"></string>

    <string name="title_activity_user_database">User Database</string>
    <string name="button_edit_userlist">Edit</string>
    <string name="button_delete_userlist">Delete</string>
    <string name="manage_user">Manage User </string>
    <string name="textview_userlist">User List</string>

</resources>
