<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutVertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.shubhamchaudhary.logmein.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="Verdana"
        android:hint="@string/edit_username_hint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="Verdana"
        android:hint="@string/edit_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:fontFamily="Verdana"
        android:text="@string/button_save_main" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="Verdana"
        android:text="@string/button_logmein"
        android:textSize="30sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="Verdana"
        android:text="@string/button_logout"
        android:textSize="30sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/button_manage_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:text="@string/manage_user"
        android:onClick="manage_user" />

    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="Verdana"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="15sp" />

</LinearLayout>
    