<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutVertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.shubhamchaudhary.logmein.UserDatabase$PlaceholderFragment" >

    <TextView
        android:id="@+id/textview_userlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Verdana"
        android:text="@string/textview_userlist"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Spinner
        android:id="@+id/spinner_user_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/LinearLayoutHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete_userlist" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_userlist" />
    </LinearLayout>


</LinearLayout>
